colocacion de flexbox y responsive en boda

--- a/html/contenido.html
+++ b/html/contenido.html
@@ -29,15 +29,17 @@
                 </ul>
             </nav>
         </div>
-        <section class="descripcion-1">
+        <section class="descripcion-contenido">
             <p class="bordeTexto">Lo visible es lo principal para una marca o emprendimiento. Si tenes uno, podemos llevar tus imagenes a otro nivel. </p>
-            <div class="img-contenido" >
+        <aside class="galeria-contenido">
+            <div class="img-contenido">
             <img class="marca-1"  src="../assets/img/contenido-1.png" alt="cartel de un local de comida">
             <img class="marca-2" src="../assets/img/contenido-2.png" alt="mesa y sillas dentro del local de comida">
             <img class="marca-3"  src="../assets/img/contenido-3.png" alt="budin de limon con glace">
             <img class="marca-4" src="../assets/img/contenido-4.png" alt="hora del te con una infusion y torta">
             <img class="marca-5" src="../assets/img/contenido-5.png" alt="budin con glace y frutos secos">
         </div>
+    </aside>
         </section>
         </main>
     
