--- a/html/eventos.html
+++ b/html/eventos.html
@@ -29,15 +29,17 @@
                 </ul>
             </nav>
         </div>
-        <section class="descripcion-1">
+    <section class="descripcion-eventos">
         <p class="bordeTexto">Que queden para siempre los momentos más divertidos entre amigos y familiares</p>
+    <aside class="galeria-eventos">
         <div class="img-eventos">
         <img class="nene-sonriendo" src="../assets/img/evento-1.png" alt="nene sonriendo">
         <img class="familia-sonriendo" src="../assets/img/evento-2.png" alt="familia sonriendo por soplarla vela de la torta">
         <img class="nene-mama" src="../assets/img/evento-3.png" alt="nene sonriendo mientras su mama lo besa">
         <img class="nene-boca" src="../assets/img/evento-4.png" alt="nene sonriendo dentro del pelotero">
-    </div>
-        </section>
+        </div>
+    </aside>
+    </section>
     </main>
 </body>
 </html>
