--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     mi trabajo en distintas ocasiones.</p>
                 <img class=fotoFlor src="./assets/img/florr.JPG" alt="mujer con camara">
             </div>
-
+        <aside class="galeria-1">
             <div class="img-index">
                 <img class="corazon-embarazada" src="./assets/img/corazon-embarazada.png" alt=" corazon embarazada">
                 <img class="mujeres-beso" src="./assets/img/Fiesta-9542.png" alt="mujeres besandoe en boda">
@@ -55,7 +55,7 @@
                     alt="familia de mama,papa e hijo sonriendo">
                 <img class="nene-sonriendo1" src="./assets/img/nene-sonriendo.png" alt="nene sonriendo">
             </div>
-
+        </aside>
         </section>
     </main>
     <footer>
