--- a/html/bodacivil.html
+++ b/html/bodacivil.html
@@ -29,15 +29,17 @@
                 </ul>
             </nav>
         </div>
-        <section class="descripcion-1">
+        <section class="descripcion-boda">
         <p class="bordeTexto">Te acompañamos en un momento tan intimo como la union civil</p>
+        <aside class="galeria-boda">
         <div class="img-boda">
                 <img class="familia-libreta" src="../assets/img/boda-1.png" alt="familia con libretra de matrimonio">
                 <img class="casados-mirandose" src="../assets/img/boda-2.png" alt="pareja de casados caminando de la mano mirandose">
                 <img class="mujer-mirandomarido" src="../assets/img/boda-3.png" alt="mujer mirando a su marido sonriendole">
                 <img class="pareja-civil" src="../assets/img/boda-4.png" alt="pareja de casados dentro del registro civil mirandose">
             </div>
-            </section>
+        </aside>
+        </section>
             </main>
 </body>
 </html>
