--- a/html/book.html
+++ b/html/book.html
@@ -30,14 +30,23 @@
                     </ul>
                 </nav>
             </div>
-        <section class="descripcion-1">
+        <section class="descripcion-book">
         <p class="bordeTexto"> Retratos del momento más feliz de tu vida</p>
+        <aside class="galeria-book">
         <div class="img-book">
         <img class="hombre-panza" src="../assets/img/book-1.png" alt="hombre acariciando panza de embarazada">
+        <div class="img-book2">
         <img class="pareja-mirandose" src="../assets/img/book-2.png" alt="pareja de hombre y mujer mirandose">
+    </div>
+    <div class="img-book3">
         <img  class="mujer-panza" src="../assets/img/book-3.png" alt="mujer acariciandose la panza">
+    </div>
+    <div class="img-book4">
         <img class="pareja-mano" src="../assets/img/book-4.png" alt="pareja de hombre y mujer agarrados de la mano sonriendo">
     </div>
+    </div>
+    </aside>
+
     </section>
         </main>
 
