creacion de html contacto con bootstrap

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Roboto:ital,wght@0,100;0,400;1,700&display=swap" rel="stylesheet">
+
 <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="bodyContacto">
@@ -29,6 +30,7 @@
                 </ul>
             </nav>
         </div>
+        <section>
         <section class="mail-section">
         <p>Mandame un e-mail</p>
     </section>
@@ -46,6 +48,8 @@
         </form>
         
     </section>
+    
 </main>
+
 </body>
 </html>
