colocacion de container en contactos de bootstrap

--- a/html/contactosss.html
+++ b/html/contactosss.html
@@ -37,7 +37,7 @@
             </div>
                 <section class="mail-contacto">
                     <p>Mandame un e-mail</p>
-                <div class="row">
+                <div class="container-fluid row">
                     <div class="col">
                         <input type="text" class="form-control" placeholder="e-mail" aria-label="First name">
                     </div>
