grids en eventos

--- a/html/book.html
+++ b/html/book.html
@@ -33,20 +33,13 @@
         <section class="descripcion-book">
         <p class="bordeTexto"> Retratos del momento más feliz de tu vida</p>
         <aside class="galeria-book">
-        <div class="img-book">
-        <img class="hombre-panza" src="../assets/img/book-1.png" alt="hombre acariciando panza de embarazada">
-        <div class="img-book2">
-        <img class="pareja-mirandose" src="../assets/img/book-2.png" alt="pareja de hombre y mujer mirandose">
-    </div>
-    <div class="img-book3">
-        <img  class="mujer-panza" src="../assets/img/book-3.png" alt="mujer acariciandose la panza">
-    </div>
-    <div class="img-book4">
-        <img class="pareja-mano" src="../assets/img/book-4.png" alt="pareja de hombre y mujer agarrados de la mano sonriendo">
-    </div>
-    </div>
-    </aside>
-
+            <div class="img-book">
+                <img class="hombre-panza img1" src="../assets/img/book-1.png" alt="hombre acariciando panza de embarazada">
+                <img class="pareja-mirandose img2" src="../assets/img/book-2.png" alt="pareja de hombre y mujer mirandose">
+                <img  class="mujer-panza img3" src="../assets/img/book-3.png" alt="mujer acariciandose la panza">
+                <img class="pareja-mano img4" src="../assets/img/book-4.png" alt="pareja de hombre y mujer agarrados de la mano sonriendo">
+            </div>
+        </aside>
     </section>
         </main>
 
