colocacion de pseudoclase y pseudoelemento en proyecto

--- a/html/contactosss.html
+++ b/html/contactosss.html
@@ -31,7 +31,7 @@
                         <li><a href="../html/bodacivil.html" target="_blank">boda/civil|</a></li>
                         <li><a href="../html/eventos.html" target="_blank">eventos|</a></li>
                         <li><a href="../html/contenido.html" target="_blank">contenido|</a></li>
-                        <li><a href="../html/contacto.html" target="_blank">contacto|</a></li>
+                        <li><a href="../html/contactosss.html" target="_blank">contacto|</a></li>
                     </ul>
                 </nav>
             </div>
