modificaciones y eliminacion de page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <img class="mujer-mirando" src="./assets/img/mujer-mirando.png" alt="mujer mirando hacia bajo">
                 <img class="hombre-nene" src="./assets/img/hombre-nene.png"
                     alt="hombre y nene mirandose y riendo">
-                <img class="pareja-mirandose" src="./assets/img/pareja-mirandose.png"
+                <img class="pareja-byn" src="./assets/img/pareja-mirandose.png"
                     alt="pareja de hombre y mujer mirandose entre si">
                 <img class="familia-feliz" src="./assets/img/familia-feliz.png"
                     alt="familia de mama,papa e hijo sonriendo">
