--- a/html/book.html
+++ b/html/book.html
@@ -21,12 +21,12 @@
             <div class="container-1">
                 <nav class="main-section">
                     <ul class="navBar2">
-                        <li><a href="../index.html" target="_blank">inicio|</a></li>
-                        <li><a href="../html/book.html" target="_blank">book|</a></li>
-                        <li><a href="../html/bodacivil.html" target="_blank">boda/civil|</a></li>
-                        <li><a href="../html/eventos.html" target="_blank">eventos|</a></li>
-                        <li><a href="../html/contenido.html" target="_blank">contenido|</a></li>
-                        <li><a href="../html/contactosss.html" target="_blank">contacto|</a></li>
+                        <li><a href="../index.html">inicio|</a></li>
+                        <li><a href="../html/book.html">book|</a></li>
+                        <li><a href="../html/bodacivil.html">boda/civil|</a></li>
+                        <li><a href="../html/eventos.html">eventos|</a></li>
+                        <li><a href="../html/contenido.html">contenido|</a></li>
+                        <li><a href="../html/contactosss.html">contacto|</a></li>
                     </ul>
                 </nav>
             </div>
