--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                 <p class="footer-1">Buenos Aires, Argentina.</p>
                 </div>
                 <div class="footer-iconos">
-                    <a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJNqLdRtCVJzhxBCJRSJjTSlwXNftgMDSCzqNrwDvvBkFPtWCBqdGfvKkHJSFwpjMwcJptL" target="_blank"> <img width="37px" src="./assets/img/Vector2.png"
+                    <a class="gmail-1" href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJNqLdRtCVJzhxBCJRSJjTSlwXNftgMDSCzqNrwDvvBkFPtWCBqdGfvKkHJSFwpjMwcJptL" target="_blank"> <img width="37px" src="./assets/img/Vector2.png"
                         alt="gmail"></a>
-                        <a href="https://www.instagram.com/fbazanfotografia" target="_blank"><img width="30px" src="./assets/img/Vector1.png"
+                        <a class="instagram-1" href="https://www.instagram.com/fbazanfotografia" target="_blank"><img width="30px" src="./assets/img/Vector1.png"
                             alt="instagram"></a>
                     <a class="whatsapp-1" href="https://web.whatsapp.com/1166272050" target="_blank"> <img width="30px" src="./assets/img/Vector.png"
                             alt="whatsapp"></a>
