seo en proyecto

--- a/html/contenido.html
+++ b/html/contenido.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fotos para tu marca o emprendimiento personal">
+    <meta name="keywords" content="fotos, fotografa profesional, contenido, marca, emprendimiento ">
     <title>CONTENIDO | FLORE.BAZAN</title>
+    <link rel="shortcut icon" href="../assets/img/camara-reflex-digital.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Roboto:ital,wght@0,100;0,400;1,700&display=swap" rel="stylesheet">
