--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fotografa profesional. Fotografias para eventos, boda/civil, contenido. Buenos Aires, Argentina">
+    <meta name="keywords" content="fotos, fotografa profesional, fotografias, mujer, boda, civil, eventos, contenido, marca, contacto">
     <title>INICIO | FLORE.BAZAN</title>
+    <link rel="shortcut icon" href="./assets/img/camara-reflex-digital.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
