--- a/html/contactosss.html
+++ b/html/contactosss.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contactame a traves de whatsapp, instagram o gmail. Buenos Aires, Argentina">
+    <meta name="keywords" content="fotos, fotografa profesional, contacto, mensaje, whatsapp, instagram, mensaje directo, gmail, email ">
     <title>CONTACTO | FLORE.BAZAN</title>
+    <link rel="shortcut icon" href="../assets/img/camara-reflex-digital.ico" type="image/x-icon">
     <link
         href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Roboto:ital,wght@0,100;0,400;1,700&display=swap"
         rel="stylesheet">
