agregue opengraph en proyecto y mas animaciones y seo

--- a/html/contactosss.html
+++ b/html/contactosss.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contactame a traves de whatsapp, instagram o gmail. Buenos Aires, Argentina">
     <meta name="keywords" content="fotos, fotografa profesional, contacto, mensaje, whatsapp, instagram, mensaje directo, gmail, email ">
+    <meta property="og:title" content=CONTACTO | FLORE.BAZAN>
+    <meta property="og:site_name" content=FLORE.BAZAN>
+    <meta property="og:url" content="">
+    <meta property="og:description" content=Contactame a través de WhatsApp, Instagram o Gmail.>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
     <title>CONTACTO | FLORE.BAZAN</title>
     <link rel="shortcut icon" href="../assets/img/camara-reflex-digital.ico" type="image/x-icon">
     <link
