--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Fotografa profesional. Fotografias para eventos, boda/civil, contenido. Buenos Aires, Argentina">
     <meta name="keywords" content="fotos, fotografa profesional, fotografias, mujer, boda, civil, eventos, contenido, marca, contacto">
+    <meta property="og:title" content=INICIO | FLORE.BAZAN>
+    <meta property="og:site_name" content=FLORE.BAZAN>
+    <meta property="og:url" content="">
+    <meta property="og:description" content=Fotografa profesional. Buenos Aires, Argentina>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
     <title>INICIO | FLORE.BAZAN</title>
     <link rel="shortcut icon" href="./assets/img/camara-reflex-digital.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
