--- a/html/bodacivil.html
+++ b/html/bodacivil.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Fotografias para tu boda o union civil. Revivi el momento más intimo.">
     <meta name="keywords" content="fotos, fotografa profesional, fotos de boda, fotos de civiles, union civil, registro civil">
+    <meta property="og:title" content=BODA | FLORE.BAZAN>
+    <meta property="og:site_name" content=FLORE.BAZAN>
+    <meta property="og:url" content="">
+    <meta property="og:description" content=Fotografías para tu boda o unión civil.>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
     <title>BODA | FLORE.BAZAN</title>
     <link rel="shortcut icon" href="../assets/img/camara-reflex-digital.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
