--- a/html/book.html
+++ b/html/book.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Fotos para tu book personal">
     <meta name="keywords" content="fotos, fotografa profesional, book personal, personal, book de 15 años, recuerdos">
+    <meta property="og:title" content=BOOK | FLORE.BAZAN>
+    <meta property="og:site_name" content=FLORE.BAZAN>
+    <meta property="og:url" content="">
+    <meta property="og:description" content=Fotos para tu book personal>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
     <title>BOOK | FLORE.BAZAN</title>
     <link rel="shortcut icon" href="../assets/img/camara-reflex-digital.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
