modificaciones en open + subida a readme

--- a/html/bodacivil.html
+++ b/html/bodacivil.html
@@ -8,10 +8,10 @@
     <meta name="keywords" content="fotos, fotografa profesional, fotos de boda, fotos de civiles, union civil, registro civil">
     <meta property="og:title" content=BODA | FLORE.BAZAN>
     <meta property="og:site_name" content=FLORE.BAZAN>
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://florebazan-ph.netlify.app/">
     <meta property="og:description" content=Fotografías para tu boda o unión civil.>
     <meta property="og:type" content=website>
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://florebazan-ph.netlify.app/assets/img/florr.JPG">
     <title>BODA | FLORE.BAZAN</title>
     <link rel="shortcut icon" href="../assets/img/camara-reflex-digital.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
