--- a/html/contactosss.html
+++ b/html/contactosss.html
@@ -9,10 +9,10 @@
     <meta name="keywords" content="fotos, fotografa profesional, contacto, mensaje, whatsapp, instagram, mensaje directo, gmail, email ">
     <meta property="og:title" content=CONTACTO | FLORE.BAZAN>
     <meta property="og:site_name" content=FLORE.BAZAN>
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://florebazan-ph.netlify.app/">
     <meta property="og:description" content=Contactame a través de WhatsApp, Instagram o Gmail.>
     <meta property="og:type" content=website>
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://florebazan-ph.netlify.app/assets/img/florr.JPG">
     <title>CONTACTO | FLORE.BAZAN</title>
     <link rel="shortcut icon" href="../assets/img/camara-reflex-digital.ico" type="image/x-icon">
     <link
