--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="fotos, fotografa profesional, fotografias, mujer, boda, civil, eventos, contenido, marca, contacto">
     <meta property="og:title" content=INICIO | FLORE.BAZAN>
     <meta property="og:site_name" content=FLORE.BAZAN>
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://florebazan-ph.netlify.app">
     <meta property="og:description" content=Fotografa profesional. Buenos Aires, Argentina>
-    <meta property="og:type" content=website>
+    <meta property="og:type" content=https://florebazan-ph.netlify.app/assets/img/florr.JPG>
     <meta property="og:image" content="">
     <title>INICIO | FLORE.BAZAN</title>
     <link rel="shortcut icon" href="./assets/img/camara-reflex-digital.ico" type="image/x-icon">
@@ -45,7 +45,7 @@
         </div>
         <section class="section-index">
             <div class="descripcion-index">
-                <p class="textoFlor"> Fotografa profesional desde 2013.
+                <p class="textoFlor"> Fotografa profesional desde 2013. <br>
                     En este sitio podras ver lo principal de
                     mi trabajo en distintas ocasiones.</p>
                 <img class=fotoFlor src="./assets/img/florr.JPG" alt="mujer con camara">
