--- a/html/contenido.html
+++ b/html/contenido.html
@@ -8,10 +8,10 @@
     <meta name="keywords" content="fotos, fotografa profesional, contenido, marca, emprendimiento ">
     <meta property="og:title" content=CONTENIDO | FLORE.BAZAN>
     <meta property="og:site_name" content=FLORE.BAZAN>
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://florebazan-ph.netlify.app/">
     <meta property="og:description" content=Fotos para tu marca o emprendimiento personal>
     <meta property="og:type" content=website>
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://florebazan-ph.netlify.app/assets/img/florr.JPG">
     <title>CONTENIDO | FLORE.BAZAN</title>
     <link rel="shortcut icon" href="../assets/img/camara-reflex-digital.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
